--- a/Client/src/app/components/header/header.component.html
+++ b/Client/src/app/components/header/header.component.html
@@ -17,10 +17,10 @@
       </div>
     </a>
 
-    <!-- Mobile Toggle Button -->
+    <!-- Mobile Togle Button -->
     <button
       class="navbar-toggler border-0"
-      type="button"
+      type="button" 
       data-bs-toggle="collapse"
       data-bs-target="#navbarNav"
       aria-controls="navbarNav"
